fix overlapping footer issue

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,6 +20,8 @@ main {
 }
 
 body {
+    display: flex;
+    flex-direction: column;
     min-height: 100vh;
 }
 
@@ -28,10 +30,8 @@ footer {
     justify-content: center;
     font-size: .7rem;
     text-align: center;
-    /* This still overlaps content when page is expanded */
-    position: fixed;
     width: 100%;
-    bottom: 0;
+    margin-top: auto;
 }
 
 #listAccordion {
